<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"

   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_55"
        android:background="#4f000000"
        android:padding="@dimen/dp_14"
        android:weightSum="2"
        android:layout_marginTop="@dimen/dp_21"
        android:gravity="center_horizontal"
        android:orientation="horizontal">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Forgot Password"
            android:layout_weight="2"
            android:gravity="center"
            app:font="@{`robo_medium`}"

            android:textColor="@color/white"
            android:textSize="@dimen/sp_18"
            android:id="@+id/textView"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dp_30">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/sp_15"
        android:gravity="center"
        app:font="@{`robo_regular`}"
        android:text="@string/forgert_pas_text"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16" />


    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sp_45"
        android:layout_marginTop="@dimen/dp_40"
        android:background="@drawable/editext_background"
        android:drawablePadding="@dimen/sp_10"
        android:textColor="@android:color/white"
        app:font="@{`robo_regular`}"
        android:hint="@string/email_conta"
        android:paddingLeft="@dimen/sp_15"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/send_button"
        android:layout_width="@dimen/dp_190"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_55"
        android:background="@drawable/red_btn"
        android:text="SEND"
        app:font="@{`robo_medium`}"
        android:textColor="@color/white"
        android:textSize="@dimen/dp_18"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_15"
        android:text="@string/cancel"
        app:font="@{`robo_regular`}"
        android:textSize="@dimen/sp_20"
        android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>
</layout>