<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FoodDetails"
    >

  <android.support.design.widget.AppBarLayout
      android:id="@+id/app_bar_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:fitsSystemWindows="true"
      android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
      >


    <android.support.design.widget.CollapsingToolbarLayout
        android:id="@+id/collapsingtoolbar"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:fitsSystemWindows="true"
        app:contentScrim="#0e0d0e"
        app:expandedTitleTextAppearance="@android:color/transparent"
        app:layout_scrollFlags="scroll|exitUntilCollapsed"
        >


      <ImageView
          android:id="@+id/img_Food"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:contentDescription="@null"
          android:scaleType="centerCrop"
          android:layout_gravity="center_horizontal"
          android:adjustViewBounds="true"
          app:layout_collapseMode="parallax"
          />

      <android.support.v7.widget.Toolbar
          android:id="@+id/my_toolbar"
          android:layout_width="match_parent"
          android:layout_height="?attr/actionBarSize"
          app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
          app:layout_collapseMode="parallax"
          />

    </android.support.design.widget.CollapsingToolbarLayout>

  </android.support.design.widget.AppBarLayout>


  <android.support.design.widget.FloatingActionButton
      android:id="@+id/btnCart"
      app:srcCompat="@drawable/ic_shopping_cart_black_24dp"
      app:backgroundTint="@color/white"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:elevation="6dp"
      app:pressedTranslationZ="12dp"
      app:layout_anchor="@id/app_bar_layout"
      app:layout_anchorGravity="bottom|right|end"
      app:useCompatPadding="true"
      />

  <android.support.v4.widget.NestedScrollView
      android:id="@+id/nestedScrollView"
      android:clipToPadding="false"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:layout_behavior="@string/appbar_scrolling_view_behavior">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true">

  
  <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <TextView
        android:id="@+id/food_name"
        android:layout_marginTop="8dp"
        android:padding="12dp"
        android:text="Food Name"
        android:textColor="@color/colorAccent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        />

    <LinearLayout
        android:id="@+id/layout_price"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <!--<ImageView-->
          <!--app:srcCompat="@drawable/ic_attach_money_black_24dp"-->
          <!--android:layout_weight="1"-->
          <!--android:layout_width="0dp"-->
          <!--android:layout_height="wrap_content"-->
          <!--/>-->

      <TextView
          android:text="KES"
          android:textStyle="bold"
          android:textSize="14sp"
          android:textColor="@color/black"
          android:layout_weight="1"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          />

      <TextView
          android:id="@+id/food_price"
          android:text="1,000"
          android:textColor="@color/colorAccent"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="9"
          android:textSize="18sp"
          android:textStyle="bold"
          />

    </LinearLayout>

  <LinearLayout
      android:id="@+id/ll_quantity"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="18dp"
      android:layout_marginStart="8dp">


    <TextView
        android:id="@+id/imgMinus"
        android:layout_width="@dimen/dp_30"
        android:layout_height="@dimen/dp_30"
        android:layout_gravity="center_vertical|center_horizontal"
        android:background="@drawable/round_text_remove_item"
        android:contentDescription="@string/minus"
        android:gravity="center_vertical|center_horizontal"
        android:text="-"
        android:textColor="#FF0000"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/tvQuantity"
        android:layout_width="@dimen/dp_30"
        android:layout_height="@dimen/dp_30"
        android:layout_gravity="center"
        android:background="@drawable/quantity_no"
        android:gravity="center"
        android:padding="@dimen/dp_6"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_12"
        />


    <TextView
        android:id="@+id/imgPlus"
        android:layout_width="@dimen/dp_30"
        android:layout_height="@dimen/dp_30"
        android:background="@drawable/round_text_add_item"
        android:contentDescription="@string/plus"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center_vertical|center_horizontal"
        android:text="+"
        android:textColor="#ff669900"
        android:textSize="20sp"
        android:textStyle="bold"
        />
  </LinearLayout>


  </LinearLayout>
</android.support.v7.widget.CardView>


  <android.support.v7.widget.CardView
      app:cardUseCompatPadding="true"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <TextView
        android:id="@+id/food_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:lineSpacingMultiplier="1.5"
        android:padding="12dp"
        android:text="Description"
       android:textColor="@color/black"
        android:textSize="14sp"
        />


  </android.support.v7.widget.CardView>

</LinearLayout>

  </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>